backend-load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-loadbalancer
  annotations:
    cloud.google.com/load-balancer-type: "External"
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - protocol: TCP      
      port: 8000
      targetPort: 8000
