database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: database-service # Can communicate by this hostname
spec:
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 3306
