frontend-load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-loadbalancer
  annotations:
    cloud.google.com/load-balancer-type: "External"
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
